@@ -2,6 +2,9 @@ This file contains details of the changes in each new version of PRISM.
 
 New since last release:
 
+* Allow command-line switches of form --sw (as well as -sw)
+* Parametric model checking
+* Fast adaptive uniformisation
 * Export labels from GUI
 
 -----------------------------------------------------------------------------
